--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
-@tailwind base;
+@import "tailwindcss";
+
+
+
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
-@custom-variant dark (&:is(.dark *));
+@tailwind utilities; */
+/* @custom-variant dark (&:is(.dark *)); */
 
 :root {
   --font-size: 14px;
